# gd-blog-report

./: README.md  pyproject.toml  scrapy.cfg
resources/: report.css  reportTemplate.html
src/: dao.py  main.py  report.py
src/gdblog/: __init__.py  items.py  pipelines.py  settings.py
src/gdblog/spiders/: __init__.py
