[tool.poetry]
name = "report"
version = "0.1.0"
description = ""
authors = ["Iryna Subota <iryna.a.subota@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
scrapy = "^1.8"
SQLAlchemy = "^1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
